--- a/InCallUI/res/values-eu-rES/strings.xml
+++ b/InCallUI/res/values-eu-rES/strings.xml
@@ -21,33 +21,15 @@
     <string name="onHold" msgid="9035493194749959955">"Zain"</string>
     <string name="unknown" msgid="6878797917991465859">"Ezezaguna"</string>
     <string name="private_num" msgid="6713286113000232309">"Zenbaki pribatua"</string>
-    <string name="payphone" msgid="1931775086311769314">"Telefono publikoa"</string>
-    <string name="callFailed_userBusy" msgid="8851106999809294904">"Linea okupatuta"</string>
-    <string name="callFailed_congestion" msgid="8737761615702718375">"Sarea okupatuta"</string>
-    <string name="callFailed_timedOut" msgid="7590961703135543346">"Ez dago erantzunik, denbora-muga gainditu da"</string>
-    <string name="callFailed_server_unreachable" msgid="2133506577423869729">"Ezin da zerbitzariarekin konektatu"</string>
-    <string name="callFailed_number_unreachable" msgid="7632566442515734778">"Zenbakia ez dago eskuragarri"</string>
-    <string name="callFailed_invalid_credentials" msgid="8226835346196775378">"Erabiltzaile-izen edo pasahitz okerra"</string>
-    <string name="callFailed_out_of_network" msgid="8740943329772180507">"Sarearen kanpotik deitu da"</string>
-    <string name="callFailed_server_error" msgid="5717915213586193217">"Zerbitzariaren errorea. Saiatu berriro geroago."</string>
-    <string name="callFailed_noSignal" msgid="1889803273616031933">"Ez dago seinalerik"</string>
-    <string name="callFailed_limitExceeded" msgid="4958065157970101491">"ACM datuen muga gainditu da"</string>
-    <string name="callFailed_powerOff" msgid="2766035859391549713">"Irratia desaktibatuta"</string>
-    <string name="callFailed_simError" msgid="4476360200030635828">"Ez dago SIM txartelik edo SIM txartelaren errore bat gertatu da"</string>
-    <string name="callFailed_outOfService" msgid="682300184520329366">"Sare mugikorra ez dago erabilgarri"</string>
-    <string name="callFailed_fdn_only" msgid="2850204579765430641">"Irteerako deiak FDN ezarpen bidez murrizten dira."</string>
-    <string name="callFailed_cb_enabled" msgid="3686963693629739680">"Ezin duzu irteerako deirik egin deien debekuak aktibatuta dauden bitartean."</string>
-    <string name="callFailed_dsac_restricted" msgid="2180223622768522345">"Dei guztiak sarbide-kontrolaren bidez murrizten dira."</string>
-    <string name="callFailed_dsac_restricted_emergency" msgid="4353654268813314466">"Larrialdi-deiak sarbide-kontrolaren bidez murrizten dira."</string>
-    <string name="callFailed_dsac_restricted_normal" msgid="2680774510252408620">"Dei normalak sarbide-kontrolaren bidez murrizten dira."</string>
-    <string name="callFailed_unobtainable_number" msgid="4736290912891155067">"Zenbaki baliogabea"</string>
+    <!-- no translation found for payphone (4793877574636445118) -->
+    <skip />
     <string name="confCall" msgid="1904840547188336828">"Konferentzia-deia"</string>
-    <string name="call_lost" msgid="317670617901479594">"Deia galdu da."</string>
-    <string name="ok" msgid="3811371167865772377">"Ados"</string>
+    <!-- no translation found for call_lost (6183862117003999578) -->
+    <skip />
     <string name="audio_mode_speaker" msgid="27649582100085266">"Bozgorailua"</string>
     <string name="audio_mode_earpiece" msgid="4156527186373869107">"Aurikularrak"</string>
     <string name="audio_mode_wired_headset" msgid="1465350758489175975">"Kabledun entzungailua"</string>
-    <string name="audio_mode_bluetooth" msgid="3047641300848211128">"Bluetootha"</string>
+    <string name="audio_mode_bluetooth" msgid="3047641300848211128">"Bluetooth"</string>
     <string name="wait_prompt_str" msgid="7601815427707856238">"Ondorengo tonuak bidali?\n"</string>
     <string name="pause_prompt_str" msgid="1789964702154314806">"Tonuak bidaltzen\n"</string>
     <string name="send_button" msgid="4106860097497818751">"Bidali"</string>
@@ -56,8 +38,9 @@
     <string name="wild_prompt_str" msgid="5543521676355533577">"Ordeztu komodina honekin:"</string>
     <string name="caller_manage_header" msgid="3231519674734638786">"Konferentzia-deiaren iraupena: <xliff:g id="CONF_CALL_TIME">%s</xliff:g>"</string>
     <string name="voicemail_settings_number_label" msgid="8524164258691887790">"Erantzungailuaren zenbakia"</string>
-    <string name="card_title_dialing" msgid="5769417478498348054">"Markatzen"</string>
-    <string name="card_title_redialing" msgid="4831412164303596395">"Berriro saiatzen"</string>
+    <string name="card_title_dialing" msgid="5769417478498348054">"Deitzen"</string>
+    <!-- no translation found for card_title_redialing (8253487008234167266) -->
+    <skip />
     <string name="card_title_conf_call" msgid="1162980346189744501">"Konferentzia-deia"</string>
     <string name="card_title_incoming_call" msgid="7364539451234646909">"Sarrerako deia"</string>
     <string name="card_title_call_ended" msgid="5544730338889702298">"Deia amaitu da"</string>
@@ -68,9 +51,12 @@
     <string name="card_title_video_call_connecting" msgid="297586766381973954">"Bideoa konektatzen"</string>
     <string name="card_title_video_call" msgid="5898636679563320218">"Bideo-deia"</string>
     <string name="card_title_video_call_requesting" msgid="4587504939739340937">"Bideoa eskatzen"</string>
-    <string name="card_title_video_call_error" msgid="5520555528871673801">"Ezin da konektatu bideo-deia"</string>
-    <string name="card_title_callback_number" msgid="4604563437776874016">"Deiak itzultzeko telefono-zenbakia\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
-    <string name="card_title_callback_number_emergency" msgid="85588345502265075">"Larrialdi-deiak itzultzeko zenbakia\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
+    <!-- no translation found for card_title_video_call_error (9000555878389539225) -->
+    <skip />
+    <!-- no translation found for card_title_callback_number (7307938207564217293) -->
+    <skip />
+    <!-- no translation found for card_title_callback_number_emergency (8634765419223426754) -->
+    <skip />
     <string name="notification_dialing" msgid="2107666444937350731">"Markatzen"</string>
     <string name="notification_missedCallTitle" msgid="7554385905572364535">"Dei galdua"</string>
     <string name="notification_missedCallsTitle" msgid="1361677948941502522">"Dei galduak"</string>
@@ -87,6 +73,7 @@
     <string name="notification_voicemail_no_vm_number" msgid="760963466895609716">"Erantzungailuaren zenbakia ezezaguna da"</string>
     <string name="notification_network_selection_title" msgid="4224455487793492772">"Ez dago zerbitzurik"</string>
     <string name="notification_network_selection_text" msgid="2607085729661923269">"Hautatutako sarea (<xliff:g id="OPERATOR_NAME">%s</xliff:g>) ez dago erabilgarri"</string>
+    <string name="notification_action_answer" msgid="6700362365135365143">"Erantzun"</string>
     <string name="notification_action_end_call" msgid="6069460915123531620">"Amaitu deia"</string>
     <string name="notification_action_answer_video" msgid="7809271910870211729">"Bideoa"</string>
     <string name="notification_action_answer_voice" msgid="1770796916369437773">"Ahotsa"</string>
@@ -96,24 +83,35 @@
     <string name="notification_missedCall_message" msgid="3049928912736917988">"Mezua"</string>
     <string name="incall_error_power_off" msgid="6550191216405193368">"Dei bat egiteko, Hegaldi modua desaktibatu behar duzu."</string>
     <string name="incall_error_emergency_only" msgid="4678640422710818317">"Ez dago sarean erregistratuta."</string>
-    <string name="incall_error_out_of_service" msgid="8587993036435080418">"Sare mugikorra ez dago erabilgarri."</string>
-    <string name="incall_error_no_phone_number_supplied" msgid="4197432103471807739">"Ez da deia bidali ez delako baliozko zenbakirik idatzi."</string>
-    <string name="incall_error_call_failed" msgid="4313552620858880999">"Ez da deia bidali."</string>
+    <string name="incall_error_out_of_service" msgid="4100065333878929223">"Sare mugikorra ez dago erabilgarri."</string>
+    <!-- no translation found for incall_error_no_phone_number_supplied (1150414018684246528) -->
+    <skip />
+    <!-- no translation found for incall_error_call_failed (6302746943230078197) -->
+    <skip />
     <string name="incall_status_dialed_mmi" msgid="3672498861336189563">"MMI sekuentzia hasten…"</string>
-    <string name="incall_error_supp_service_unknown" msgid="2991054870745666038">"Ez da zerbitzua onartzen."</string>
-    <string name="incall_error_supp_service_switch" msgid="3503552565745872241">"Ezin da dei batetik bestera pasa."</string>
-    <string name="incall_error_supp_service_separate" msgid="914362338192301746">"Ezin da deia banandu."</string>
-    <string name="incall_error_supp_service_transfer" msgid="2509871374644921632">"Ezin da deia transferitu."</string>
-    <string name="incall_error_supp_service_conference" msgid="2505727299596357312">"Ezin da konferentzia-deirik egin."</string>
-    <string name="incall_error_supp_service_reject" msgid="7055164130563826216">"Ezin da deia baztertu."</string>
-    <string name="incall_error_supp_service_hangup" msgid="7417583238334762737">"Ezin dira deiak askatu."</string>
-    <string name="incall_error_missing_voicemail_number" msgid="2995137160077097934">"Erantzungailuaren zenbaki ezezaguna."</string>
+    <!-- no translation found for incall_error_supp_service_unknown (323435289607131929) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_switch (5237002176899962862) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_separate (7224393405134545246) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_transfer (7235952238189391438) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_conference (7010354362202271726) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_reject (8998568661508655638) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_hangup (7434513517153834426) -->
+    <skip />
     <string name="incall_call_type_label_sip" msgid="4931428719494190371">"SIP deia"</string>
     <string name="emergency_enable_radio_dialog_title" msgid="4627849966634578257">"Larrialdi-deia"</string>
     <string name="emergency_enable_radio_dialog_message" msgid="207613549344420291">"Irratia pizten…"</string>
-    <string name="emergency_enable_radio_dialog_retry" msgid="3724423402363063736">"Zerbitzu-eremutik kanpo; berriro saiatzen…"</string>
-    <string name="dial_emergency_error" msgid="7969515493359619960">"Ez da deia bidali. <xliff:g id="NON_EMERGENCY_NUMBER">%s</xliff:g> ez da larrialdietarako zenbaki bat!"</string>
-    <string name="dial_emergency_empty_error" msgid="5556166819619323893">"Ez da deia bidali. Markatu larrialdietarako zenbaki bat!"</string>
+    <!-- no translation found for emergency_enable_radio_dialog_retry (5960061579996526883) -->
+    <skip />
+    <!-- no translation found for dial_emergency_error (1509085166367420355) -->
+    <skip />
+    <!-- no translation found for dial_emergency_empty_error (9130194953830414638) -->
+    <skip />
     <string name="dialerKeyboardHintText" msgid="9192914825413747792">"Erabili teklatua markatzeko"</string>
     <string name="overflowHoldMenuItemText" msgid="7382457697092158039">"Utzi deia zain"</string>
     <string name="overflowResumeMenuItemText" msgid="8826360006222366843">"Berrekin deiari"</string>
@@ -128,7 +126,7 @@
     <string name="onscreenMergeCallsText" msgid="6640195098064538950">"Bateratu deiak"</string>
     <string name="onscreenSwapCallsText" msgid="1602990689244030047">"Trukatu"</string>
     <string name="onscreenManageCallsText" msgid="5473231160123254154">"Kudeatu deiak"</string>
-    <string name="onscreenManageConferenceText" msgid="6801708317570467407">"Kudeatu konferentzia-deia"</string>
+    <string name="onscreenManageConferenceText" msgid="6801708317570467407">"Kudeatu deia"</string>
     <string name="onscreenAudioText" msgid="1710087112800041743">"Audioa"</string>
     <string name="onscreenVideoCallText" msgid="4800924186056115442">"Bideo-deia"</string>
     <string name="onscreenChangeToVoiceText" msgid="5311407863653867937">"Aldatu ahots-deira"</string>
@@ -147,28 +145,15 @@
     <string name="respond_via_sms_custom_message" msgid="6158880869935281078">"Idatzi zeure erantzuna…"</string>
     <string name="custom_message_cancel" msgid="7516406059429609296">"Utzi"</string>
     <string name="custom_message_send" msgid="5795754217085747742">"Bidali"</string>
-    <string name="description_image_button_one" msgid="5502718871331943463">"bat"</string>
-    <string name="description_image_button_two" msgid="4903738528222924522">"bi"</string>
-    <string name="description_image_button_three" msgid="5570985408463782329">"hiru"</string>
-    <string name="description_image_button_four" msgid="1697520001239289074">"lau"</string>
-    <string name="description_image_button_five" msgid="3450276493026943454">"bost"</string>
-    <string name="description_image_button_six" msgid="2070376172268675300">"sei"</string>
-    <string name="description_image_button_seven" msgid="1757351311199993371">"zazpi"</string>
-    <string name="description_image_button_eight" msgid="4734693919020613227">"zortzi"</string>
-    <string name="description_image_button_nine" msgid="5568534122590597040">"bederatzi"</string>
-    <string name="description_image_button_star" msgid="1976280813017254462">"izarra"</string>
-    <string name="description_image_button_zero" msgid="4211255756866893605">"zero"</string>
-    <string name="description_image_button_pound" msgid="1716041284529917866">"libra"</string>
-    <string name="description_dial_button" msgid="7459705245418435351">"markatu"</string>
-    <string name="description_delete_button" msgid="4015842181592283903">"atzera tekla"</string>
     <string name="accessibility_speakerphone_selected" msgid="4389354567657833468">"Bozgorailua hautatu da"</string>
     <string name="accessibility_earpiece_selected" msgid="5749525199671068663">"Aurikularrak hautatu dira"</string>
     <string name="accessibility_wired_headset_selected" msgid="2984920743124263932">"Kabledun entzungailua hautatu da"</string>
     <string name="accessibility_bluetooth_headset_selected" msgid="2785473629292181736">"Bluetooth entzungailua hautatu da"</string>
     <string name="accessibility_call_muted" msgid="2776111226185342220">"Deiaren audioa desaktibatu da."</string>
-    <string name="accessibility_call_unmuted" msgid="7496527089753980871">"Aktibatu deiaren audioa."</string>
+    <string name="accessibility_call_unmuted" msgid="7496527089753980871">"Deiaren audioa aktibatu da."</string>
     <string name="accessibility_call_put_on_hold" msgid="4226100429657528833">"Deia zain utzi da."</string>
-    <string name="accessibility_call_removed_from_hold" msgid="2269352120695851563">"Deia berreskuratu da."</string>
+    <!-- no translation found for accessibility_call_removed_from_hold (5107480079544990575) -->
+    <skip />
     <string name="description_target_answer" msgid="7205604197797472471">"Erantzun"</string>
     <string name="description_target_send_sms" msgid="2098326025587950144">"Bidali SMS mezua"</string>
     <string name="description_target_decline" msgid="4789834364389731957">"Baztertu"</string>
@@ -186,9 +171,9 @@
     <string name="default_notification_description" msgid="78174796906240970">"Soinu lehenetsia (<xliff:g id="DEFAULT_SOUND_TITLE">%1$s</xliff:g>)"</string>
     <string name="ringtone_title" msgid="6374978286202084684">"Telefonoaren tonua"</string>
     <string name="vibrate_on_ring_title" msgid="9197564612065258960">"Egin dar-dar tonua jotzean"</string>
-    <string name="dial_pad_autocomplete" msgid="494525952035761075">"Osatu markagailua automatikoki"</string>
+    <!-- no translation found for dial_pad_autocomplete (7683489952557536398) -->
+    <skip />
     <string name="preference_category_ringtone" msgid="5197960752529332721">"Tonua eta dardara"</string>
     <string name="manageConferenceLabel" msgid="4691922394301969053">"Kudeatu konferentzia-deia"</string>
     <string name="emergency_call_dialog_number_for_display" msgid="8373041754188879871">"Larrialdietarako zenbakia"</string>
-    <string name="select_account_dialog_title" msgid="5730339500156684204">"Hautatu kontua"</string>
 </resources>
