--- a/InCallUI/res/values-ne-rNP/strings.xml
+++ b/InCallUI/res/values-ne-rNP/strings.xml
@@ -21,29 +21,9 @@
     <string name="onHold" msgid="9035493194749959955">"होल्डमा"</string>
     <string name="unknown" msgid="6878797917991465859">"अज्ञात"</string>
     <string name="private_num" msgid="6713286113000232309">"निजी नम्बर"</string>
-    <string name="payphone" msgid="1931775086311769314">"फोन तिर्नुहोस्"</string>
-    <string name="callFailed_userBusy" msgid="8851106999809294904">"लाइन व्यस्त"</string>
-    <string name="callFailed_congestion" msgid="8737761615702718375">"नेटवर्क व्यस्त"</string>
-    <string name="callFailed_timedOut" msgid="7590961703135543346">"कुनै पनि जवाफ छैन, समय सकियो।"</string>
-    <string name="callFailed_server_unreachable" msgid="2133506577423869729">"सर्भर पहुँचयोग्य"</string>
-    <string name="callFailed_number_unreachable" msgid="7632566442515734778">"सङ्ख्या पहुँचयोग्य छैन"</string>
-    <string name="callFailed_invalid_credentials" msgid="8226835346196775378">"गलत प्रयोगकर्ता नाम वा पासवर्ड"</string>
-    <string name="callFailed_out_of_network" msgid="8740943329772180507">"नेटवर्कको बाहिरबाट कल भयो"</string>
-    <string name="callFailed_server_error" msgid="5717915213586193217">"सर्भर त्रुटि। पछि पुनःप्रयास गर्नुहोस्।"</string>
-    <string name="callFailed_noSignal" msgid="1889803273616031933">"सङ्केत छैन"</string>
-    <string name="callFailed_limitExceeded" msgid="4958065157970101491">"ACM सीमा पार भयो"</string>
-    <string name="callFailed_powerOff" msgid="2766035859391549713">"रेडियो बन्द"</string>
-    <string name="callFailed_simError" msgid="4476360200030635828">"SIM छैन वा SIM त्रुटि"</string>
-    <string name="callFailed_outOfService" msgid="682300184520329366">"मोबाइल सञ्जाल उपलब्ध छैन"</string>
-    <string name="callFailed_fdn_only" msgid="2850204579765430641">"FDN द्वारा बहिर्गमन कल निषेधित गरिएको छ।"</string>
-    <string name="callFailed_cb_enabled" msgid="3686963693629739680">"कल ब्यारिङ हुँदा तपाईं बहिर्गमन कलहरू गर्न सक्नु हुन्न।"</string>
-    <string name="callFailed_dsac_restricted" msgid="2180223622768522345">"पहुँच नियन्त्रणद्वारा सबै कलहरू प्रतिबन्धित छन्।"</string>
-    <string name="callFailed_dsac_restricted_emergency" msgid="4353654268813314466">"पहुँच नियन्त्रणद्वारा आपतकालीन कलहरू प्रतिबन्धित छन्।"</string>
-    <string name="callFailed_dsac_restricted_normal" msgid="2680774510252408620">"पहुँच नियन्त्रणद्वारा सामान्य कलहरू प्रतिबन्धित छन्।"</string>
-    <string name="callFailed_unobtainable_number" msgid="4736290912891155067">"अमान्य सङ्ख्या"</string>
+    <string name="payphone" msgid="4793877574636445118">"पेफोन"</string>
     <string name="confCall" msgid="1904840547188336828">"सम्मेलन कल"</string>
-    <string name="call_lost" msgid="317670617901479594">"कल हराएको छ।"</string>
-    <string name="ok" msgid="3811371167865772377">"ठिक छ"</string>
+    <string name="call_lost" msgid="6183862117003999578">"कल ड्रप गरियो"</string>
     <string name="audio_mode_speaker" msgid="27649582100085266">"स्पिकर"</string>
     <string name="audio_mode_earpiece" msgid="4156527186373869107">"ह्यान्डसेट इयरपिस"</string>
     <string name="audio_mode_wired_headset" msgid="1465350758489175975">"तारसहितको हेडसेट"</string>
@@ -57,7 +37,7 @@
     <string name="caller_manage_header" msgid="3231519674734638786">"सम्मेलन कल <xliff:g id="CONF_CALL_TIME">%s</xliff:g>"</string>
     <string name="voicemail_settings_number_label" msgid="8524164258691887790">"भ्वाइसमेल नम्बर"</string>
     <string name="card_title_dialing" msgid="5769417478498348054">"डायल गर्दै"</string>
-    <string name="card_title_redialing" msgid="4831412164303596395">"पुनः प्रयास गर्दै"</string>
+    <string name="card_title_redialing" msgid="8253487008234167266">"पुन: डायल गर्दै"</string>
     <string name="card_title_conf_call" msgid="1162980346189744501">"सम्मेलन कल"</string>
     <string name="card_title_incoming_call" msgid="7364539451234646909">"आगमन कल"</string>
     <string name="card_title_call_ended" msgid="5544730338889702298">"कल अन्त्य भयो"</string>
@@ -68,9 +48,9 @@
     <string name="card_title_video_call_connecting" msgid="297586766381973954">"भिडियो जडान गरिँदै"</string>
     <string name="card_title_video_call" msgid="5898636679563320218">"भिडियो कल"</string>
     <string name="card_title_video_call_requesting" msgid="4587504939739340937">"भिडियो अनुरोध"</string>
-    <string name="card_title_video_call_error" msgid="5520555528871673801">"भिडियो कल जडान गर्न सकिएन"</string>
-    <string name="card_title_callback_number" msgid="4604563437776874016">"तपाईंको कल ब्याक नम्बर\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
-    <string name="card_title_callback_number_emergency" msgid="85588345502265075">"तपाईंको आकस्मिक कल फिर्ता नम्बर\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
+    <string name="card_title_video_call_error" msgid="9000555878389539225">"भिडियो कल जडान गर्न सक्दैन"</string>
+    <string name="card_title_callback_number" msgid="7307938207564217293">"तपाईंको कलब्याक नम्बर \n<xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
+    <string name="card_title_callback_number_emergency" msgid="8634765419223426754">"तपाईंको आपतकालिन कलब्याक नम्बर \n<xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
     <string name="notification_dialing" msgid="2107666444937350731">"डायल गर्ने"</string>
     <string name="notification_missedCallTitle" msgid="7554385905572364535">"छुटेका कल"</string>
     <string name="notification_missedCallsTitle" msgid="1361677948941502522">"छुटेका कल"</string>
@@ -87,6 +67,7 @@
     <string name="notification_voicemail_no_vm_number" msgid="760963466895609716">"अज्ञात भवाइसमेल नम्बर"</string>
     <string name="notification_network_selection_title" msgid="4224455487793492772">"सेवा छैन"</string>
     <string name="notification_network_selection_text" msgid="2607085729661923269">"चयन गरिएको नेटवर्क ( <xliff:g id="OPERATOR_NAME">%s</xliff:g> ) अनुपलब्ध"</string>
+    <string name="notification_action_answer" msgid="6700362365135365143">"उत्तर दिनुहोस्"</string>
     <string name="notification_action_end_call" msgid="6069460915123531620">"छुटाउनुहोस्"</string>
     <string name="notification_action_answer_video" msgid="7809271910870211729">"भिडियो"</string>
     <string name="notification_action_answer_voice" msgid="1770796916369437773">"आवाज"</string>
@@ -96,24 +77,23 @@
     <string name="notification_missedCall_message" msgid="3049928912736917988">"सन्देश"</string>
     <string name="incall_error_power_off" msgid="6550191216405193368">"कल राख्नका लागि, पहिले हवाइजहाज मोड बन्द गर्नुहोस्।"</string>
     <string name="incall_error_emergency_only" msgid="4678640422710818317">"नेटवर्कमा दर्ता भएको छैन।"</string>
-    <string name="incall_error_out_of_service" msgid="8587993036435080418">"मोबाइल नेटवर्क उपलब्ध छैन।"</string>
-    <string name="incall_error_no_phone_number_supplied" msgid="4197432103471807739">"कल पठाइएन, सही नम्बर प्रविष्टि गरिएको छैन।"</string>
-    <string name="incall_error_call_failed" msgid="4313552620858880999">"कल पठाइएन"</string>
+    <string name="incall_error_out_of_service" msgid="4100065333878929223">"सेलुलर सञ्जाल उपलब्ध छैन।"</string>
+    <string name="incall_error_no_phone_number_supplied" msgid="1150414018684246528">"एक कल गर्नको लागि, एक वैध नम्बर प्रविष्ट गर्नुहोस्।"</string>
+    <string name="incall_error_call_failed" msgid="6302746943230078197">"कल गर्न सक्दैन।"</string>
     <string name="incall_status_dialed_mmi" msgid="3672498861336189563">"MMI अनुक्रम सुरु गर्दै..."</string>
-    <string name="incall_error_supp_service_unknown" msgid="2991054870745666038">"असमर्थित सेवा।"</string>
-    <string name="incall_error_supp_service_switch" msgid="3503552565745872241">"कलहरू स्विच गर्न असमर्थ ।"</string>
-    <string name="incall_error_supp_service_separate" msgid="914362338192301746">"कल अलग गर्न असमर्थ ।"</string>
-    <string name="incall_error_supp_service_transfer" msgid="2509871374644921632">"कल हस्तान्तरण गर्न असमर्थ"</string>
-    <string name="incall_error_supp_service_conference" msgid="2505727299596357312">"सम्मेलन कलहरू गर्न असमर्थ।"</string>
-    <string name="incall_error_supp_service_reject" msgid="7055164130563826216">"कल अस्वीकार गर्न असमर्थ।"</string>
-    <string name="incall_error_supp_service_hangup" msgid="7417583238334762737">"कल(हरू) छुटाउन असमर्थ।"</string>
-    <string name="incall_error_missing_voicemail_number" msgid="2995137160077097934">"भ्वाइसमेल नम्बर अज्ञात छ।"</string>
+    <string name="incall_error_supp_service_unknown" msgid="323435289607131929">"सेवा समर्थित छैन।"</string>
+    <string name="incall_error_supp_service_switch" msgid="5237002176899962862">"कल स्विच गर्न सक्दैन।"</string>
+    <string name="incall_error_supp_service_separate" msgid="7224393405134545246">"कल अलग गर्न सक्दैन।"</string>
+    <string name="incall_error_supp_service_transfer" msgid="7235952238189391438">"हस्तान्तरण गर्न सक्दैन।"</string>
+    <string name="incall_error_supp_service_conference" msgid="7010354362202271726">"सम्मेलन गर्न सक्दैन।"</string>
+    <string name="incall_error_supp_service_reject" msgid="8998568661508655638">"कल अस्वीकार गर्न सक्दैन।"</string>
+    <string name="incall_error_supp_service_hangup" msgid="7434513517153834426">"कल (हरू) जारी गर्न सकिँदैन ।"</string>
     <string name="incall_call_type_label_sip" msgid="4931428719494190371">"SIP कल"</string>
     <string name="emergency_enable_radio_dialog_title" msgid="4627849966634578257">"आपतकालीन कल"</string>
     <string name="emergency_enable_radio_dialog_message" msgid="207613549344420291">"रेडियो खोल्दै..."</string>
-    <string name="emergency_enable_radio_dialog_retry" msgid="3724423402363063736">"सेवा क्षेत्रभन्दा बाहिर, पुनः प्रयास गर्दै..."</string>
-    <string name="dial_emergency_error" msgid="7969515493359619960">"कल पठाएको छैन। <xliff:g id="NON_EMERGENCY_NUMBER">%s</xliff:g> आपतकालीन नम्बर हैन!"</string>
-    <string name="dial_emergency_empty_error" msgid="5556166819619323893">"कल पठाएको छैन। एउटा आपतकालीन नम्बर डायल गर्नुहोस्!"</string>
+    <string name="emergency_enable_radio_dialog_retry" msgid="5960061579996526883">"कुनै सेवा छैन। फेरि प्रयास गर्दै ..."</string>
+    <string name="dial_emergency_error" msgid="1509085166367420355">"कल गर्न सकिँदैन। <xliff:g id="NON_EMERGENCY_NUMBER">%s</xliff:g> आपतकालीन नम्बर होइन।"</string>
+    <string name="dial_emergency_empty_error" msgid="9130194953830414638">"कल गर्न सकिँदैन। आपतकालीन नम्बर डायल गर्नुहोस्।"</string>
     <string name="dialerKeyboardHintText" msgid="9192914825413747792">"डायल गर्न किबोर्ड प्रयोग गर्नुहोस्"</string>
     <string name="overflowHoldMenuItemText" msgid="7382457697092158039">"कल होल्ड गर्नुहोस्"</string>
     <string name="overflowResumeMenuItemText" msgid="8826360006222366843">"कललाई पुन: निरन्तरता दिनुहोस्"</string>
@@ -128,8 +108,7 @@
     <string name="onscreenMergeCallsText" msgid="6640195098064538950">"कलहरू समायोजन  गर्नुहोस्"</string>
     <string name="onscreenSwapCallsText" msgid="1602990689244030047">"स्वाप"</string>
     <string name="onscreenManageCallsText" msgid="5473231160123254154">"कलहरू प्रबन्ध गर्नुहोस्"</string>
-    <!-- no translation found for onscreenManageConferenceText (6801708317570467407) -->
-    <skip />
+    <string name="onscreenManageConferenceText" msgid="6801708317570467407">"सम्मेलन कल प्रबन्ध गर्नुहोस्"</string>
     <string name="onscreenAudioText" msgid="1710087112800041743">"अडियो"</string>
     <string name="onscreenVideoCallText" msgid="4800924186056115442">"भिडियो कल"</string>
     <string name="onscreenChangeToVoiceText" msgid="5311407863653867937">"आवाज कल गर्न परिवर्तन"</string>
@@ -148,20 +127,6 @@
     <string name="respond_via_sms_custom_message" msgid="6158880869935281078">"आफ्नै लेख्नुहोस्..."</string>
     <string name="custom_message_cancel" msgid="7516406059429609296">"रद्द गर्नुहोस्"</string>
     <string name="custom_message_send" msgid="5795754217085747742">"पठाउनुहोस्"</string>
-    <string name="description_image_button_one" msgid="5502718871331943463">"एक"</string>
-    <string name="description_image_button_two" msgid="4903738528222924522">"दुई"</string>
-    <string name="description_image_button_three" msgid="5570985408463782329">"तिन"</string>
-    <string name="description_image_button_four" msgid="1697520001239289074">"चार"</string>
-    <string name="description_image_button_five" msgid="3450276493026943454">"पाँच"</string>
-    <string name="description_image_button_six" msgid="2070376172268675300">"छ"</string>
-    <string name="description_image_button_seven" msgid="1757351311199993371">"सात"</string>
-    <string name="description_image_button_eight" msgid="4734693919020613227">"आठ"</string>
-    <string name="description_image_button_nine" msgid="5568534122590597040">"नौ"</string>
-    <string name="description_image_button_star" msgid="1976280813017254462">"तारा चिन्ह"</string>
-    <string name="description_image_button_zero" msgid="4211255756866893605">"शून्य"</string>
-    <string name="description_image_button_pound" msgid="1716041284529917866">"पाउन्ड"</string>
-    <string name="description_dial_button" msgid="7459705245418435351">"डायल"</string>
-    <string name="description_delete_button" msgid="4015842181592283903">"ब्याकस्पेस"</string>
     <string name="accessibility_speakerphone_selected" msgid="4389354567657833468">"स्पिकरफोन चयन गरियो"</string>
     <string name="accessibility_earpiece_selected" msgid="5749525199671068663">"इयरपिस चयन गरियो"</string>
     <string name="accessibility_wired_headset_selected" msgid="2984920743124263932">"तार युक्त हेडसेट चयन गरियो"</string>
@@ -169,7 +134,7 @@
     <string name="accessibility_call_muted" msgid="2776111226185342220">"कल म्युट भयो।"</string>
     <string name="accessibility_call_unmuted" msgid="7496527089753980871">"कलको मौनता हटाइयो।"</string>
     <string name="accessibility_call_put_on_hold" msgid="4226100429657528833">"कल होल्डमा राखियो।"</string>
-    <string name="accessibility_call_removed_from_hold" msgid="2269352120695851563">"कल होल्डबाट हटाइयो।"</string>
+    <string name="accessibility_call_removed_from_hold" msgid="5107480079544990575">"कल अब पकडमा छैन"</string>
     <string name="description_target_answer" msgid="7205604197797472471">"उत्तर"</string>
     <string name="description_target_send_sms" msgid="2098326025587950144">"SMS पठाउनुहोस्"</string>
     <string name="description_target_decline" msgid="4789834364389731957">"अस्वीकार गर्नुहोस्"</string>
@@ -187,9 +152,8 @@
     <string name="default_notification_description" msgid="78174796906240970">"पूर्वनिर्धारित ध्वनि ( <xliff:g id="DEFAULT_SOUND_TITLE">%1$s</xliff:g> )"</string>
     <string name="ringtone_title" msgid="6374978286202084684">"फोन रिङटोन"</string>
     <string name="vibrate_on_ring_title" msgid="9197564612065258960">"घन्टी बज्दा भाइब्रेट"</string>
-    <string name="dial_pad_autocomplete" msgid="494525952035761075">"डायल प्याड स्वतःपूर्ण"</string>
+    <string name="dial_pad_autocomplete" msgid="7683489952557536398">"डायलप्याड स्वतःपूर्णता"</string>
     <string name="preference_category_ringtone" msgid="5197960752529332721">"रिङ्गटोन र भाइब्रेट"</string>
     <string name="manageConferenceLabel" msgid="4691922394301969053">"सम्मेलन कल प्रबन्ध गर्नुहोस्"</string>
     <string name="emergency_call_dialog_number_for_display" msgid="8373041754188879871">"आपतकालीन नम्बर"</string>
-    <string name="select_account_dialog_title" msgid="5730339500156684204">"खाता चयन गर्नुहोस्"</string>
 </resources>
