--- a/InCallUI/res/values-ta-rIN/strings.xml
+++ b/InCallUI/res/values-ta-rIN/strings.xml
@@ -17,33 +17,15 @@
 
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="phoneAppLabel" product="default" msgid="906161039445636857">"மொபைல்"</string>
+    <string name="phoneAppLabel" product="default" msgid="906161039445636857">"ஃபோன்"</string>
     <string name="onHold" msgid="9035493194749959955">"காத்திருப்பில்"</string>
     <string name="unknown" msgid="6878797917991465859">"தெரியாதவர்"</string>
     <string name="private_num" msgid="6713286113000232309">"தனிப்பட்ட எண்"</string>
-    <string name="payphone" msgid="1931775086311769314">"கட்டண மொபைல்"</string>
-    <string name="callFailed_userBusy" msgid="8851106999809294904">"லைன் பிஸியாக உள்ளது"</string>
-    <string name="callFailed_congestion" msgid="8737761615702718375">"நெட்வொர்க் பிஸி"</string>
-    <string name="callFailed_timedOut" msgid="7590961703135543346">"பதில் இல்லை, நேரம் முடிந்தது"</string>
-    <string name="callFailed_server_unreachable" msgid="2133506577423869729">"சேவையகம் தொடர்பில் இல்லை"</string>
-    <string name="callFailed_number_unreachable" msgid="7632566442515734778">"தொடர்புகொள்ள முடியவில்லை"</string>
-    <string name="callFailed_invalid_credentials" msgid="8226835346196775378">"பயனர்பெயர் அல்லது கடவுச்சொல் தவறானது"</string>
-    <string name="callFailed_out_of_network" msgid="8740943329772180507">"நெட்வொர்க்கிற்கு அப்பாற்பட்ட எல்லையிலிருந்து அழைக்கப்பட்டது"</string>
-    <string name="callFailed_server_error" msgid="5717915213586193217">"சேவையகப் பிழை. பிறகு முயலவும்."</string>
-    <string name="callFailed_noSignal" msgid="1889803273616031933">"சிக்னல் இல்லை"</string>
-    <string name="callFailed_limitExceeded" msgid="4958065157970101491">"ACM வரம்பு மீறப்பட்டது"</string>
-    <string name="callFailed_powerOff" msgid="2766035859391549713">"ரேடியோ முடக்கப்பட்டது"</string>
-    <string name="callFailed_simError" msgid="4476360200030635828">"SIM இல்லை அல்லது SIM பிழை"</string>
-    <string name="callFailed_outOfService" msgid="682300184520329366">"மொபைல் நெட்வொர்க் இல்லை"</string>
-    <string name="callFailed_fdn_only" msgid="2850204579765430641">"வெளிச்செல்லும் அழைப்புகள் FDN ஆல் தடுக்கப்பட்டன."</string>
-    <string name="callFailed_cb_enabled" msgid="3686963693629739680">"அழைப்பு தடுப்பில் இருக்கும்போது பிறரை அழைக்க முடியாது."</string>
-    <string name="callFailed_dsac_restricted" msgid="2180223622768522345">"அணுகல் கட்டுப்பாட்டின் மூலம் எல்லா அழைப்புகளும் தடுக்கப்பட்டன."</string>
-    <string name="callFailed_dsac_restricted_emergency" msgid="4353654268813314466">"அணுகல் கட்டுப்பாட்டின் மூலம் அவசர அழைப்புகள் தடுக்கப்பட்டன."</string>
-    <string name="callFailed_dsac_restricted_normal" msgid="2680774510252408620">"அணுகல் கட்டுப்பாட்டின் மூலம் இயல்பான அழைப்புகள் தடுக்கப்பட்டன."</string>
-    <string name="callFailed_unobtainable_number" msgid="4736290912891155067">"எண் தவறானது"</string>
+    <!-- no translation found for payphone (4793877574636445118) -->
+    <skip />
     <string name="confCall" msgid="1904840547188336828">"குழு அழைப்பு"</string>
-    <string name="call_lost" msgid="317670617901479594">"அழைப்பு முடிந்தது."</string>
-    <string name="ok" msgid="3811371167865772377">"சரி"</string>
+    <!-- no translation found for call_lost (6183862117003999578) -->
+    <skip />
     <string name="audio_mode_speaker" msgid="27649582100085266">"ஸ்பீக்கர்"</string>
     <string name="audio_mode_earpiece" msgid="4156527186373869107">"ஹேண்ட்செட் இயர்ஃபீஸ்"</string>
     <string name="audio_mode_wired_headset" msgid="1465350758489175975">"வயருடன்கூடிய ஹெட்செட்"</string>
@@ -57,7 +39,8 @@
     <string name="caller_manage_header" msgid="3231519674734638786">"குழு அழைப்பு <xliff:g id="CONF_CALL_TIME">%s</xliff:g>"</string>
     <string name="voicemail_settings_number_label" msgid="8524164258691887790">"குரலஞ்சல் எண்"</string>
     <string name="card_title_dialing" msgid="5769417478498348054">"டயல் செய்கிறது"</string>
-    <string name="card_title_redialing" msgid="4831412164303596395">"மீண்டும் முயற்சிக்கிறது"</string>
+    <!-- no translation found for card_title_redialing (8253487008234167266) -->
+    <skip />
     <string name="card_title_conf_call" msgid="1162980346189744501">"குழு அழைப்பு"</string>
     <string name="card_title_incoming_call" msgid="7364539451234646909">"உள்வரும் அழைப்பு"</string>
     <string name="card_title_call_ended" msgid="5544730338889702298">"அழைப்பு முடிந்தது"</string>
@@ -68,9 +51,12 @@
     <string name="card_title_video_call_connecting" msgid="297586766381973954">"வீடியோவை இணைக்கிறது"</string>
     <string name="card_title_video_call" msgid="5898636679563320218">"வீடியோ அழைப்பு"</string>
     <string name="card_title_video_call_requesting" msgid="4587504939739340937">"வீடியோவைக் கோருகிறது"</string>
-    <string name="card_title_video_call_error" msgid="5520555528871673801">"வீடியோ அழைப்பை இணைக்க முடியவில்லை"</string>
-    <string name="card_title_callback_number" msgid="4604563437776874016">"திருப்பி அழைப்பதற்கான எண்\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
-    <string name="card_title_callback_number_emergency" msgid="85588345502265075">"அவசர அழைப்பு எண்\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
+    <!-- no translation found for card_title_video_call_error (9000555878389539225) -->
+    <skip />
+    <!-- no translation found for card_title_callback_number (7307938207564217293) -->
+    <skip />
+    <!-- no translation found for card_title_callback_number_emergency (8634765419223426754) -->
+    <skip />
     <string name="notification_dialing" msgid="2107666444937350731">"அழைக்கிறது"</string>
     <string name="notification_missedCallTitle" msgid="7554385905572364535">"தவறிய அழைப்பு"</string>
     <string name="notification_missedCallsTitle" msgid="1361677948941502522">"தவறிய அழைப்புகள்"</string>
@@ -87,6 +73,7 @@
     <string name="notification_voicemail_no_vm_number" msgid="760963466895609716">"குரலஞ்சல் எண் அறியப்படவில்லை"</string>
     <string name="notification_network_selection_title" msgid="4224455487793492772">"சேவை இல்லை"</string>
     <string name="notification_network_selection_text" msgid="2607085729661923269">"தேர்ந்தெடுத்த நெட்வொர்க் (<xliff:g id="OPERATOR_NAME">%s</xliff:g>) கிடைக்கவில்லை"</string>
+    <string name="notification_action_answer" msgid="6700362365135365143">"பதில்"</string>
     <string name="notification_action_end_call" msgid="6069460915123531620">"துண்டி"</string>
     <string name="notification_action_answer_video" msgid="7809271910870211729">"வீடியோ"</string>
     <string name="notification_action_answer_voice" msgid="1770796916369437773">"குரல்"</string>
@@ -96,24 +83,35 @@
     <string name="notification_missedCall_message" msgid="3049928912736917988">"செய்தி"</string>
     <string name="incall_error_power_off" msgid="6550191216405193368">"அழைப்பதற்கு, முதலில் விமானப் பயன்முறையை முடக்கவும்."</string>
     <string name="incall_error_emergency_only" msgid="4678640422710818317">"நெட்வொர்க்கில் பதிவுசெய்யப்படவில்லை."</string>
-    <string name="incall_error_out_of_service" msgid="8587993036435080418">"மொபைல் நெட்வொர்க் கிடைக்கவில்லை."</string>
-    <string name="incall_error_no_phone_number_supplied" msgid="4197432103471807739">"அழைக்க முடியவில்லை, சரியான எண் உள்ளிடப்படவில்லை."</string>
-    <string name="incall_error_call_failed" msgid="4313552620858880999">"அழைக்க முடியவில்லை."</string>
+    <string name="incall_error_out_of_service" msgid="4100065333878929223">"செல்லுலார் நெட்வொர்க் கிடைக்கவில்லை."</string>
+    <!-- no translation found for incall_error_no_phone_number_supplied (1150414018684246528) -->
+    <skip />
+    <!-- no translation found for incall_error_call_failed (6302746943230078197) -->
+    <skip />
     <string name="incall_status_dialed_mmi" msgid="3672498861336189563">"MMI வரிசையைத் தொடங்குகிறது..."</string>
-    <string name="incall_error_supp_service_unknown" msgid="2991054870745666038">"ஆதரிக்கப்படாத சேவை."</string>
-    <string name="incall_error_supp_service_switch" msgid="3503552565745872241">"அழைப்புகளுக்குள் மாற முடியவில்லை."</string>
-    <string name="incall_error_supp_service_separate" msgid="914362338192301746">"அழைப்பைத் தனியாக்க முடியவில்லை."</string>
-    <string name="incall_error_supp_service_transfer" msgid="2509871374644921632">"அழைப்பைப் பரிமாற்ற முடியவில்லை."</string>
-    <string name="incall_error_supp_service_conference" msgid="2505727299596357312">"குழு அழைப்புகளை மேற்கொள்ள முடியவில்லை."</string>
-    <string name="incall_error_supp_service_reject" msgid="7055164130563826216">"அழைப்பை நிராகரிக்க முடியவில்லை."</string>
-    <string name="incall_error_supp_service_hangup" msgid="7417583238334762737">"அழைப்பை(களை) முடிக்க முடியவில்லை."</string>
-    <string name="incall_error_missing_voicemail_number" msgid="2995137160077097934">"குரலஞ்சல் எண் அறியப்படாதது."</string>
+    <!-- no translation found for incall_error_supp_service_unknown (323435289607131929) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_switch (5237002176899962862) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_separate (7224393405134545246) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_transfer (7235952238189391438) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_conference (7010354362202271726) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_reject (8998568661508655638) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_hangup (7434513517153834426) -->
+    <skip />
     <string name="incall_call_type_label_sip" msgid="4931428719494190371">"SIP அழைப்பு"</string>
     <string name="emergency_enable_radio_dialog_title" msgid="4627849966634578257">"அவசரகால அழைப்பு"</string>
     <string name="emergency_enable_radio_dialog_message" msgid="207613549344420291">"ரேடியோவை இயக்குகிறது…"</string>
-    <string name="emergency_enable_radio_dialog_retry" msgid="3724423402363063736">"சேவை பகுதிக்கு வெளியே உள்ளது, மீண்டும் முயற்சிக்கிறது..."</string>
-    <string name="dial_emergency_error" msgid="7969515493359619960">"அழைக்க முடியவில்லை, <xliff:g id="NON_EMERGENCY_NUMBER">%s</xliff:g> ஆனது அவசரகால எண் அல்ல!"</string>
-    <string name="dial_emergency_empty_error" msgid="5556166819619323893">"அழைக்க முடியாது. அவசரகால எண்ணை டயல் செய்யவும்!"</string>
+    <!-- no translation found for emergency_enable_radio_dialog_retry (5960061579996526883) -->
+    <skip />
+    <!-- no translation found for dial_emergency_error (1509085166367420355) -->
+    <skip />
+    <!-- no translation found for dial_emergency_empty_error (9130194953830414638) -->
+    <skip />
     <string name="dialerKeyboardHintText" msgid="9192914825413747792">"டயல் செய்வதற்கு விசைப்பலகையைப் பயன்படுத்துக"</string>
     <string name="overflowHoldMenuItemText" msgid="7382457697092158039">"அழைப்பை இடைநிறுத்து"</string>
     <string name="overflowResumeMenuItemText" msgid="8826360006222366843">"அழைப்பைத் தொடர்"</string>
@@ -147,20 +145,6 @@
     <string name="respond_via_sms_custom_message" msgid="6158880869935281078">"சொந்தமாக எழுதவும்..."</string>
     <string name="custom_message_cancel" msgid="7516406059429609296">"ரத்துசெய்"</string>
     <string name="custom_message_send" msgid="5795754217085747742">"அனுப்பு"</string>
-    <string name="description_image_button_one" msgid="5502718871331943463">"ஒன்று"</string>
-    <string name="description_image_button_two" msgid="4903738528222924522">"இரண்டு"</string>
-    <string name="description_image_button_three" msgid="5570985408463782329">"மூன்று"</string>
-    <string name="description_image_button_four" msgid="1697520001239289074">"நான்கு"</string>
-    <string name="description_image_button_five" msgid="3450276493026943454">"ஐந்து"</string>
-    <string name="description_image_button_six" msgid="2070376172268675300">"ஆறு"</string>
-    <string name="description_image_button_seven" msgid="1757351311199993371">"ஏழு"</string>
-    <string name="description_image_button_eight" msgid="4734693919020613227">"எட்டு"</string>
-    <string name="description_image_button_nine" msgid="5568534122590597040">"ஒன்பது"</string>
-    <string name="description_image_button_star" msgid="1976280813017254462">"நட்சத்திரம்"</string>
-    <string name="description_image_button_zero" msgid="4211255756866893605">"பூஜ்ஜியம்"</string>
-    <string name="description_image_button_pound" msgid="1716041284529917866">"பவுண்ட்"</string>
-    <string name="description_dial_button" msgid="7459705245418435351">"டயல்"</string>
-    <string name="description_delete_button" msgid="4015842181592283903">"backspace"</string>
     <string name="accessibility_speakerphone_selected" msgid="4389354567657833468">"ஸ்பீக்கர்போன் தேர்ந்தெடுக்கப்பட்டது"</string>
     <string name="accessibility_earpiece_selected" msgid="5749525199671068663">"இயர்பீஸ் தேர்ந்தெடுக்கப்பட்டது"</string>
     <string name="accessibility_wired_headset_selected" msgid="2984920743124263932">"வயர் ஹெட்செட் தேர்ந்தெடுக்கப்பட்டது"</string>
@@ -168,7 +152,8 @@
     <string name="accessibility_call_muted" msgid="2776111226185342220">"அழைப்பு முடக்கப்பட்டது."</string>
     <string name="accessibility_call_unmuted" msgid="7496527089753980871">"அழைப்பு இயக்கப்பட்டது."</string>
     <string name="accessibility_call_put_on_hold" msgid="4226100429657528833">"அழைப்பு இடைநிறுத்தப்பட்டது."</string>
-    <string name="accessibility_call_removed_from_hold" msgid="2269352120695851563">"அழைப்பு மீள் இயக்கப்பட்டது."</string>
+    <!-- no translation found for accessibility_call_removed_from_hold (5107480079544990575) -->
+    <skip />
     <string name="description_target_answer" msgid="7205604197797472471">"பதிலளி"</string>
     <string name="description_target_send_sms" msgid="2098326025587950144">"SMS அனுப்பு"</string>
     <string name="description_target_decline" msgid="4789834364389731957">"நிராகரி"</string>
@@ -186,9 +171,9 @@
     <string name="default_notification_description" msgid="78174796906240970">"இயல்பு ஒலி (<xliff:g id="DEFAULT_SOUND_TITLE">%1$s</xliff:g>)"</string>
     <string name="ringtone_title" msgid="6374978286202084684">"தொலைபேசி ரிங்டோன்"</string>
     <string name="vibrate_on_ring_title" msgid="9197564612065258960">"ரிங் ஆகும்போது அதிர்வை ஏற்படுத்து"</string>
-    <string name="dial_pad_autocomplete" msgid="494525952035761075">"டயல்பேடு தானாக முடித்தல்"</string>
+    <!-- no translation found for dial_pad_autocomplete (7683489952557536398) -->
+    <skip />
     <string name="preference_category_ringtone" msgid="5197960752529332721">"ரிங்டோன் &amp; அதிர்வு"</string>
     <string name="manageConferenceLabel" msgid="4691922394301969053">"குழு அழைப்பை நிர்வகிக்கவும்"</string>
     <string name="emergency_call_dialog_number_for_display" msgid="8373041754188879871">"அவசரகால எண்"</string>
-    <string name="select_account_dialog_title" msgid="5730339500156684204">"கணக்கைத் தேர்ந்தெடு"</string>
 </resources>
