--- a/InCallUI/res/values-te-rIN/strings.xml
+++ b/InCallUI/res/values-te-rIN/strings.xml
@@ -21,29 +21,11 @@
     <string name="onHold" msgid="9035493194749959955">"హోల్డ్‌లో ఉంది"</string>
     <string name="unknown" msgid="6878797917991465859">"తెలియదు"</string>
     <string name="private_num" msgid="6713286113000232309">"ప్రైవేట్ నంబర్"</string>
-    <string name="payphone" msgid="1931775086311769314">"పే ఫోన్"</string>
-    <string name="callFailed_userBusy" msgid="8851106999809294904">"లైన్ బిజీగా ఉంది"</string>
-    <string name="callFailed_congestion" msgid="8737761615702718375">"నెట్‌వర్క్ బిజీగా ఉంది"</string>
-    <string name="callFailed_timedOut" msgid="7590961703135543346">"ప్రతిస్పందన లేదు, సమయం ముగిసింది"</string>
-    <string name="callFailed_server_unreachable" msgid="2133506577423869729">"సర్వర్‌ను చేరుకోవడం సాధ్యపడలేదు"</string>
-    <string name="callFailed_number_unreachable" msgid="7632566442515734778">"నంబర్‌ను చేరుకోవడం సాధ్యపడలేదు"</string>
-    <string name="callFailed_invalid_credentials" msgid="8226835346196775378">"చెల్లని వినియోగదారు పేరు లేదా పాస్‌వర్డ్"</string>
-    <string name="callFailed_out_of_network" msgid="8740943329772180507">"నెట్‌వర్క్ లేని చోటు నుండి కాల్ చేయబడింది"</string>
-    <string name="callFailed_server_error" msgid="5717915213586193217">"సర్వర్ లోపం. తర్వాత మళ్లీ ప్రయత్నించండి."</string>
-    <string name="callFailed_noSignal" msgid="1889803273616031933">"సిగ్నల్ లేదు"</string>
-    <string name="callFailed_limitExceeded" msgid="4958065157970101491">"ACM పరిమితి మించిపోయింది"</string>
-    <string name="callFailed_powerOff" msgid="2766035859391549713">"రేడియో ఆఫ్‌లో ఉంది"</string>
-    <string name="callFailed_simError" msgid="4476360200030635828">"SIM లేదు లేదా SIM లోపం"</string>
-    <string name="callFailed_outOfService" msgid="682300184520329366">"మొబైల్ నెట్‌వర్క్ అందుబాటులో లేదు"</string>
-    <string name="callFailed_fdn_only" msgid="2850204579765430641">"FDN ద్వారా అవుట్‌గోయింగ్ కాల్‌లు పరిమితం చేయబడ్డాయి."</string>
-    <string name="callFailed_cb_enabled" msgid="3686963693629739680">"కాల్ బేరింగ్ ఆన్‌లో ఉన్నప్పుడు మీరు అవుట్‌గోయింగ్ కాల్‌లు చేయలేరు."</string>
-    <string name="callFailed_dsac_restricted" msgid="2180223622768522345">"ప్రాప్యత నియంత్రణ ద్వారా అన్ని కాల్‌లు పరిమితం చేయబడ్డాయి."</string>
-    <string name="callFailed_dsac_restricted_emergency" msgid="4353654268813314466">"ప్రాప్యత నియంత్రణ ద్వారా అత్యవసర కాల్‌లు పరిమితం చేయబడ్డాయి."</string>
-    <string name="callFailed_dsac_restricted_normal" msgid="2680774510252408620">"ప్రాప్యత నియంత్రణ ద్వారా సాధారణ కాల్‌లు పరిమితం చేయబడ్డాయి."</string>
-    <string name="callFailed_unobtainable_number" msgid="4736290912891155067">"నంబర్ చెల్లదు"</string>
+    <!-- no translation found for payphone (4793877574636445118) -->
+    <skip />
     <string name="confCall" msgid="1904840547188336828">"కాన్ఫరెన్స్ కాల్"</string>
-    <string name="call_lost" msgid="317670617901479594">"కాల్‌ను కోల్పోయారు."</string>
-    <string name="ok" msgid="3811371167865772377">"సరే"</string>
+    <!-- no translation found for call_lost (6183862117003999578) -->
+    <skip />
     <string name="audio_mode_speaker" msgid="27649582100085266">"స్పీకర్"</string>
     <string name="audio_mode_earpiece" msgid="4156527186373869107">"హ్యాండ్‌సెట్ ఇయర్‌పీస్"</string>
     <string name="audio_mode_wired_headset" msgid="1465350758489175975">"వైర్ గల హెడ్‌సెట్"</string>
@@ -57,7 +39,8 @@
     <string name="caller_manage_header" msgid="3231519674734638786">"కాన్ఫరెన్స్ కాల్ <xliff:g id="CONF_CALL_TIME">%s</xliff:g>"</string>
     <string name="voicemail_settings_number_label" msgid="8524164258691887790">"వాయిస్ మెయిల్ నంబర్"</string>
     <string name="card_title_dialing" msgid="5769417478498348054">"డయల్ చేస్తోంది"</string>
-    <string name="card_title_redialing" msgid="4831412164303596395">"పునఃప్రయత్నిస్తోంది"</string>
+    <!-- no translation found for card_title_redialing (8253487008234167266) -->
+    <skip />
     <string name="card_title_conf_call" msgid="1162980346189744501">"కాన్ఫరెన్స్ కాల్"</string>
     <string name="card_title_incoming_call" msgid="7364539451234646909">"ఇన్‌కమింగ్ కాల్"</string>
     <string name="card_title_call_ended" msgid="5544730338889702298">"కాల్ ముగిసింది"</string>
@@ -68,9 +51,12 @@
     <string name="card_title_video_call_connecting" msgid="297586766381973954">"వీడియోను కనెక్ట్ చేస్తోంది"</string>
     <string name="card_title_video_call" msgid="5898636679563320218">"వీడియో కాల్"</string>
     <string name="card_title_video_call_requesting" msgid="4587504939739340937">"వీడియో కోసం అభ్యర్థిస్తోంది"</string>
-    <string name="card_title_video_call_error" msgid="5520555528871673801">"వీడియో కాల్‌ను కనెక్ట్ చేయడం సాధ్యపడదు"</string>
-    <string name="card_title_callback_number" msgid="4604563437776874016">"మీ కాల్ బ్యాక్ నంబర్\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
-    <string name="card_title_callback_number_emergency" msgid="85588345502265075">"మీ అత్యవసర కాల్ బ్యాక్ నంబర్\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
+    <!-- no translation found for card_title_video_call_error (9000555878389539225) -->
+    <skip />
+    <!-- no translation found for card_title_callback_number (7307938207564217293) -->
+    <skip />
+    <!-- no translation found for card_title_callback_number_emergency (8634765419223426754) -->
+    <skip />
     <string name="notification_dialing" msgid="2107666444937350731">"డయల్ చేస్తోంది"</string>
     <string name="notification_missedCallTitle" msgid="7554385905572364535">"సమాధానం ఇవ్వని కాల్"</string>
     <string name="notification_missedCallsTitle" msgid="1361677948941502522">"సమాధానం ఇవ్వని కాల్‌లు"</string>
@@ -87,6 +73,7 @@
     <string name="notification_voicemail_no_vm_number" msgid="760963466895609716">"వాయిస్ మెయిల్ నంబర్ తెలియదు"</string>
     <string name="notification_network_selection_title" msgid="4224455487793492772">"సేవ లేదు"</string>
     <string name="notification_network_selection_text" msgid="2607085729661923269">"ఎంచుకున్న నెట్‌వర్క్ (<xliff:g id="OPERATOR_NAME">%s</xliff:g>) అందుబాటులో లేదు"</string>
+    <string name="notification_action_answer" msgid="6700362365135365143">"సమాధానం"</string>
     <string name="notification_action_end_call" msgid="6069460915123531620">"కాల్‌ను ముగించు"</string>
     <string name="notification_action_answer_video" msgid="7809271910870211729">"వీడియో"</string>
     <string name="notification_action_answer_voice" msgid="1770796916369437773">"వాయిస్"</string>
@@ -96,24 +83,35 @@
     <string name="notification_missedCall_message" msgid="3049928912736917988">"సందేశం"</string>
     <string name="incall_error_power_off" msgid="6550191216405193368">"కాల్ చేయడానికి, మొదట ఎయిర్‌ప్లైన్ మోడ్‌ను ఆపివేయండి."</string>
     <string name="incall_error_emergency_only" msgid="4678640422710818317">"నెట్‌వర్క్‌లో నమోదు కాలేదు."</string>
-    <string name="incall_error_out_of_service" msgid="8587993036435080418">"మొబైల్ నెట్‌వర్క్ అందుబాటులో లేదు."</string>
-    <string name="incall_error_no_phone_number_supplied" msgid="4197432103471807739">"కాల్ చేయలేరు, చెల్లుబాటు అయ్యే నంబర్ నమోదు చేయలేదు."</string>
-    <string name="incall_error_call_failed" msgid="4313552620858880999">"కాల్ వెళ్లలేదు."</string>
+    <string name="incall_error_out_of_service" msgid="4100065333878929223">"సెల్యులార్ నెట్‌వర్క్ అందుబాటులో లేదు."</string>
+    <!-- no translation found for incall_error_no_phone_number_supplied (1150414018684246528) -->
+    <skip />
+    <!-- no translation found for incall_error_call_failed (6302746943230078197) -->
+    <skip />
     <string name="incall_status_dialed_mmi" msgid="3672498861336189563">"MMI శ్రేణిని ప్రారంభిస్తోంది…"</string>
-    <string name="incall_error_supp_service_unknown" msgid="2991054870745666038">"మద్దతు లేని సేవ."</string>
-    <string name="incall_error_supp_service_switch" msgid="3503552565745872241">"కాల్‌లను మార్చడం సాధ్యపడలేదు."</string>
-    <string name="incall_error_supp_service_separate" msgid="914362338192301746">"కాల్‌ను వేరు చేయడం సాధ్యపడలేదు."</string>
-    <string name="incall_error_supp_service_transfer" msgid="2509871374644921632">"కాల్‌ను బదిలీ చేయడం సాధ్యపడలేదు."</string>
-    <string name="incall_error_supp_service_conference" msgid="2505727299596357312">"కాన్ఫరెన్స్ కాల్‌లు చేయడం సాధ్యపడలేదు."</string>
-    <string name="incall_error_supp_service_reject" msgid="7055164130563826216">"కాల్‌ను తిరస్కరించడం సాధ్యపడలేదు."</string>
-    <string name="incall_error_supp_service_hangup" msgid="7417583238334762737">"కాల్(లు)ను చేయడం సాధ్యపడలేదు."</string>
-    <string name="incall_error_missing_voicemail_number" msgid="2995137160077097934">"వాయిస్‌మెయిల్ నంబర్ తెలియదు."</string>
+    <!-- no translation found for incall_error_supp_service_unknown (323435289607131929) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_switch (5237002176899962862) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_separate (7224393405134545246) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_transfer (7235952238189391438) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_conference (7010354362202271726) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_reject (8998568661508655638) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_hangup (7434513517153834426) -->
+    <skip />
     <string name="incall_call_type_label_sip" msgid="4931428719494190371">"SIP కాల్"</string>
     <string name="emergency_enable_radio_dialog_title" msgid="4627849966634578257">"అత్యవసర కాల్"</string>
     <string name="emergency_enable_radio_dialog_message" msgid="207613549344420291">"రేడియోను ప్రారంభిస్తోంది…"</string>
-    <string name="emergency_enable_radio_dialog_retry" msgid="3724423402363063736">"సేవా ప్రాంతంలో లేదు, పునఃప్రయత్నిస్తోంది…"</string>
-    <string name="dial_emergency_error" msgid="7969515493359619960">"కాల్ వెళ్లలేదు. <xliff:g id="NON_EMERGENCY_NUMBER">%s</xliff:g> అత్యవసర నంబర్ కాదు!"</string>
-    <string name="dial_emergency_empty_error" msgid="5556166819619323893">"కాల్ వెళ్లలేదు. అత్యవసర నంబర్‌కు డయల్ చేయండి!"</string>
+    <!-- no translation found for emergency_enable_radio_dialog_retry (5960061579996526883) -->
+    <skip />
+    <!-- no translation found for dial_emergency_error (1509085166367420355) -->
+    <skip />
+    <!-- no translation found for dial_emergency_empty_error (9130194953830414638) -->
+    <skip />
     <string name="dialerKeyboardHintText" msgid="9192914825413747792">"డయల్ చేయడానికి కీబోర్డ్‌ను ఉపయోగించండి"</string>
     <string name="overflowHoldMenuItemText" msgid="7382457697092158039">"కాల్‌ను హోల్డ్‌లో ఉంచు"</string>
     <string name="overflowResumeMenuItemText" msgid="8826360006222366843">"కాల్‌ను పునఃప్రారంభించు"</string>
@@ -147,20 +145,6 @@
     <string name="respond_via_sms_custom_message" msgid="6158880869935281078">"మీ స్వంతంగా వ్రాయండి…"</string>
     <string name="custom_message_cancel" msgid="7516406059429609296">"రద్దు చేయి"</string>
     <string name="custom_message_send" msgid="5795754217085747742">"పంపు"</string>
-    <string name="description_image_button_one" msgid="5502718871331943463">"ఒకటి"</string>
-    <string name="description_image_button_two" msgid="4903738528222924522">"రెండు"</string>
-    <string name="description_image_button_three" msgid="5570985408463782329">"మూడు"</string>
-    <string name="description_image_button_four" msgid="1697520001239289074">"నాలుగు"</string>
-    <string name="description_image_button_five" msgid="3450276493026943454">"అయిదు"</string>
-    <string name="description_image_button_six" msgid="2070376172268675300">"ఆరు"</string>
-    <string name="description_image_button_seven" msgid="1757351311199993371">"ఏడు"</string>
-    <string name="description_image_button_eight" msgid="4734693919020613227">"ఎనిమిది"</string>
-    <string name="description_image_button_nine" msgid="5568534122590597040">"తొమ్మిది"</string>
-    <string name="description_image_button_star" msgid="1976280813017254462">"నక్షత్రం"</string>
-    <string name="description_image_button_zero" msgid="4211255756866893605">"సున్నా"</string>
-    <string name="description_image_button_pound" msgid="1716041284529917866">"పౌండ్"</string>
-    <string name="description_dial_button" msgid="7459705245418435351">"డయల్ చేయి"</string>
-    <string name="description_delete_button" msgid="4015842181592283903">"backspace"</string>
     <string name="accessibility_speakerphone_selected" msgid="4389354567657833468">"స్పీకర్‌ఫోన్ ఎంచుకోబడింది"</string>
     <string name="accessibility_earpiece_selected" msgid="5749525199671068663">"ఇయర్‌పీస్ ఎంచుకోబడింది"</string>
     <string name="accessibility_wired_headset_selected" msgid="2984920743124263932">"వైర్ గల హెడ్‌సెట్ ఎంచుకోబడింది"</string>
@@ -168,7 +152,8 @@
     <string name="accessibility_call_muted" msgid="2776111226185342220">"కాల్ మ్యూట్ చేయబడింది."</string>
     <string name="accessibility_call_unmuted" msgid="7496527089753980871">"కాల్ అన్‌మ్యూట్ చేయబడింది."</string>
     <string name="accessibility_call_put_on_hold" msgid="4226100429657528833">"కాల్‌ హోల్డ్‌లో ఉంది."</string>
-    <string name="accessibility_call_removed_from_hold" msgid="2269352120695851563">"కాల్ హోల్డ్ నుండి తీసివేయబడింది."</string>
+    <!-- no translation found for accessibility_call_removed_from_hold (5107480079544990575) -->
+    <skip />
     <string name="description_target_answer" msgid="7205604197797472471">"సమాధానం ఇవ్వండి"</string>
     <string name="description_target_send_sms" msgid="2098326025587950144">"SMS పంపండి"</string>
     <string name="description_target_decline" msgid="4789834364389731957">"తిరస్కరిస్తున్నాను"</string>
@@ -186,9 +171,9 @@
     <string name="default_notification_description" msgid="78174796906240970">"డిఫాల్ట్ ధ్వని (<xliff:g id="DEFAULT_SOUND_TITLE">%1$s</xliff:g>)"</string>
     <string name="ringtone_title" msgid="6374978286202084684">"ఫోన్ రింగ్‌టోన్"</string>
     <string name="vibrate_on_ring_title" msgid="9197564612065258960">"రింగ్ అవుతున్నప్పుడు వైబ్రేట్ చేయి"</string>
-    <string name="dial_pad_autocomplete" msgid="494525952035761075">"డయల్ ప్యాడ్ స్వీయ పూర్తి"</string>
+    <!-- no translation found for dial_pad_autocomplete (7683489952557536398) -->
+    <skip />
     <string name="preference_category_ringtone" msgid="5197960752529332721">"రింగ్‌టోన్ &amp; వైబ్రేట్"</string>
     <string name="manageConferenceLabel" msgid="4691922394301969053">"కాన్ఫరెన్స్ కాల్‌ను నిర్వహించండి"</string>
     <string name="emergency_call_dialog_number_for_display" msgid="8373041754188879871">"అత్యవసర నంబర్"</string>
-    <string name="select_account_dialog_title" msgid="5730339500156684204">"ఖాతాను ఎంచుకోండి"</string>
 </resources>
