--- a/InCallUI/res/values-ur-rPK/strings.xml
+++ b/InCallUI/res/values-ur-rPK/strings.xml
@@ -21,29 +21,11 @@
     <string name="onHold" msgid="9035493194749959955">"ہولڈ پر"</string>
     <string name="unknown" msgid="6878797917991465859">"نامعلوم"</string>
     <string name="private_num" msgid="6713286113000232309">"نجی نمبر"</string>
-    <string name="payphone" msgid="1931775086311769314">"پے فون"</string>
-    <string name="callFailed_userBusy" msgid="8851106999809294904">"لائن مصروف ہے"</string>
-    <string name="callFailed_congestion" msgid="8737761615702718375">"نیٹ ورک مصروف ہے"</string>
-    <string name="callFailed_timedOut" msgid="7590961703135543346">"کوئی جواب نہیں، وقت ختم ہوگیا"</string>
-    <string name="callFailed_server_unreachable" msgid="2133506577423869729">"سرور ناقابل رسائی ہے"</string>
-    <string name="callFailed_number_unreachable" msgid="7632566442515734778">"نمبر ناقابل رسائی ہے"</string>
-    <string name="callFailed_invalid_credentials" msgid="8226835346196775378">"غلط صارف نام یا پاس ورڈ"</string>
-    <string name="callFailed_out_of_network" msgid="8740943329772180507">"نیٹ ورک کے باہر سے کال کیا"</string>
-    <string name="callFailed_server_error" msgid="5717915213586193217">"سرور کی خرابی۔ بعد میں دوبارہ کوشش کریں۔"</string>
-    <string name="callFailed_noSignal" msgid="1889803273616031933">"کوئی سگنل نہیں ہے"</string>
-    <string name="callFailed_limitExceeded" msgid="4958065157970101491">"‏ACM حد سے تجاوز کر گیا"</string>
-    <string name="callFailed_powerOff" msgid="2766035859391549713">"ریڈیو آف ہے"</string>
-    <string name="callFailed_simError" msgid="4476360200030635828">"‏SIM نہیں ہے یا SIM میں خرابی ہے"</string>
-    <string name="callFailed_outOfService" msgid="682300184520329366">"موبائل نیٹ ورک دستیاب نہیں ہے۔"</string>
-    <string name="callFailed_fdn_only" msgid="2850204579765430641">"‏باہر جانے والی کالیں FDN کے ذریعہ ممنوع کر دی گئی ہیں۔"</string>
-    <string name="callFailed_cb_enabled" msgid="3686963693629739680">"آپ کال بندش آن ہونے کی حالت میں باہر جانے والی کالیں نہیں کرسکتے ہیں۔"</string>
-    <string name="callFailed_dsac_restricted" msgid="2180223622768522345">"تمام کالیں رسائی کنٹرول کے ذریعہ ممنوع کر دی گئی ہیں۔"</string>
-    <string name="callFailed_dsac_restricted_emergency" msgid="4353654268813314466">"ایمرجنسی کالیں رسائی کنٹرول کے ذریعہ ممنوع کر دی گئی ہیں۔"</string>
-    <string name="callFailed_dsac_restricted_normal" msgid="2680774510252408620">"عمومی کالیں رسائی کنٹرول کے ذریعہ ممنوع کر دی گئی ہیں۔"</string>
-    <string name="callFailed_unobtainable_number" msgid="4736290912891155067">"غلط نمبر"</string>
+    <!-- no translation found for payphone (4793877574636445118) -->
+    <skip />
     <string name="confCall" msgid="1904840547188336828">"کانفرنس کال"</string>
-    <string name="call_lost" msgid="317670617901479594">"کال کھو گئی ہے۔"</string>
-    <string name="ok" msgid="3811371167865772377">"ٹھیک ہے"</string>
+    <!-- no translation found for call_lost (6183862117003999578) -->
+    <skip />
     <string name="audio_mode_speaker" msgid="27649582100085266">"اسپیکر"</string>
     <string name="audio_mode_earpiece" msgid="4156527186373869107">"ہینڈسیٹ ایئرپیس"</string>
     <string name="audio_mode_wired_headset" msgid="1465350758489175975">"تار والا ہیڈسیٹ"</string>
@@ -57,7 +39,8 @@
     <string name="caller_manage_header" msgid="3231519674734638786">"کانفرنس کال <xliff:g id="CONF_CALL_TIME">%s</xliff:g>"</string>
     <string name="voicemail_settings_number_label" msgid="8524164258691887790">"صوتی میل نمبر"</string>
     <string name="card_title_dialing" msgid="5769417478498348054">"ڈائل ہو رہا ہے"</string>
-    <string name="card_title_redialing" msgid="4831412164303596395">"دوبارہ کوشش کر رہا ہے"</string>
+    <!-- no translation found for card_title_redialing (8253487008234167266) -->
+    <skip />
     <string name="card_title_conf_call" msgid="1162980346189744501">"کانفرنس کال"</string>
     <string name="card_title_incoming_call" msgid="7364539451234646909">"آنے والی کال"</string>
     <string name="card_title_call_ended" msgid="5544730338889702298">"کال ختم ہوگئی"</string>
@@ -68,9 +51,12 @@
     <string name="card_title_video_call_connecting" msgid="297586766381973954">"ویڈیو کال مربوط ہو رہی ہے"</string>
     <string name="card_title_video_call" msgid="5898636679563320218">"ویڈیو کال"</string>
     <string name="card_title_video_call_requesting" msgid="4587504939739340937">"ویڈیو کی درخواست کی جا رہی ہے"</string>
-    <string name="card_title_video_call_error" msgid="5520555528871673801">"ویڈیو کال مربوط نہیں کی جا سکتی"</string>
-    <string name="card_title_callback_number" msgid="4604563437776874016">"آپ کا واپسی کال نمبر\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
-    <string name="card_title_callback_number_emergency" msgid="85588345502265075">"آپ کا ہنگامی واپسی کال نمبر\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
+    <!-- no translation found for card_title_video_call_error (9000555878389539225) -->
+    <skip />
+    <!-- no translation found for card_title_callback_number (7307938207564217293) -->
+    <skip />
+    <!-- no translation found for card_title_callback_number_emergency (8634765419223426754) -->
+    <skip />
     <string name="notification_dialing" msgid="2107666444937350731">"ڈائل ہو رہا ہے"</string>
     <string name="notification_missedCallTitle" msgid="7554385905572364535">"چھوٹی ہوئی کال"</string>
     <string name="notification_missedCallsTitle" msgid="1361677948941502522">"چھوٹی ہوئی کالیں"</string>
@@ -87,6 +73,7 @@
     <string name="notification_voicemail_no_vm_number" msgid="760963466895609716">"صوتی میل نمبر نامعلوم ہے"</string>
     <string name="notification_network_selection_title" msgid="4224455487793492772">"کوئی سروس نہیں ہے"</string>
     <string name="notification_network_selection_text" msgid="2607085729661923269">"منتخب کردہ نیٹ ورک (<xliff:g id="OPERATOR_NAME">%s</xliff:g>) دستیاب نہیں ہے"</string>
+    <string name="notification_action_answer" msgid="6700362365135365143">"جواب دیں"</string>
     <string name="notification_action_end_call" msgid="6069460915123531620">"کال منقطع کریں"</string>
     <string name="notification_action_answer_video" msgid="7809271910870211729">"ویڈیو"</string>
     <string name="notification_action_answer_voice" msgid="1770796916369437773">"آواز"</string>
@@ -96,24 +83,35 @@
     <string name="notification_missedCall_message" msgid="3049928912736917988">"پیغام"</string>
     <string name="incall_error_power_off" msgid="6550191216405193368">"کال کرنے کیلئے، پہلے ہوائی جہاز طرز کو آف کریں۔"</string>
     <string name="incall_error_emergency_only" msgid="4678640422710818317">"نیٹ ورک پر رجسٹرڈ نہیں ہے۔"</string>
-    <string name="incall_error_out_of_service" msgid="8587993036435080418">"موبائل نیٹ ورک دستیاب نہیں ہے۔"</string>
-    <string name="incall_error_no_phone_number_supplied" msgid="4197432103471807739">"کال نہیں بھیجی گئی، کوئی درست نمبر درج نہیں کیا گیا۔"</string>
-    <string name="incall_error_call_failed" msgid="4313552620858880999">"کال نہیں بھیجی گئی۔"</string>
+    <string name="incall_error_out_of_service" msgid="4100065333878929223">"سیلولر نیٹ ورک دستیاب نہیں ہے۔"</string>
+    <!-- no translation found for incall_error_no_phone_number_supplied (1150414018684246528) -->
+    <skip />
+    <!-- no translation found for incall_error_call_failed (6302746943230078197) -->
+    <skip />
     <string name="incall_status_dialed_mmi" msgid="3672498861336189563">"‏MMI ترتیب شروع ہو رہی ہے…"</string>
-    <string name="incall_error_supp_service_unknown" msgid="2991054870745666038">"غیر تعاون یافتہ سروس۔"</string>
-    <string name="incall_error_supp_service_switch" msgid="3503552565745872241">"کالیں سوئچ کرنے سے قاصر ہے۔"</string>
-    <string name="incall_error_supp_service_separate" msgid="914362338192301746">"کال علیحدہ کرنے سے قاصر ہے۔"</string>
-    <string name="incall_error_supp_service_transfer" msgid="2509871374644921632">"کال منتقل کرنے سے قاصر ہے۔"</string>
-    <string name="incall_error_supp_service_conference" msgid="2505727299596357312">"کانفرنس کالیں کرنے سے قاصر ہے۔"</string>
-    <string name="incall_error_supp_service_reject" msgid="7055164130563826216">"کال مسترد کرنے سے قاصر ہے۔"</string>
-    <string name="incall_error_supp_service_hangup" msgid="7417583238334762737">"کال (کالیں) جاری کرنے سے قاصر ہے۔"</string>
-    <string name="incall_error_missing_voicemail_number" msgid="2995137160077097934">"صوتی میل نمبر نامعلوم ہے۔"</string>
+    <!-- no translation found for incall_error_supp_service_unknown (323435289607131929) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_switch (5237002176899962862) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_separate (7224393405134545246) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_transfer (7235952238189391438) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_conference (7010354362202271726) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_reject (8998568661508655638) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_hangup (7434513517153834426) -->
+    <skip />
     <string name="incall_call_type_label_sip" msgid="4931428719494190371">"‏SIP کال"</string>
     <string name="emergency_enable_radio_dialog_title" msgid="4627849966634578257">"ہنگامی کال"</string>
     <string name="emergency_enable_radio_dialog_message" msgid="207613549344420291">"ریڈیو آن کر رہا ہے…"</string>
-    <string name="emergency_enable_radio_dialog_retry" msgid="3724423402363063736">"سروس کے علاقے سے باہر، دوبارہ کوشش ہو رہی ہے…"</string>
-    <string name="dial_emergency_error" msgid="7969515493359619960">"کال نہیں بھیجی گئی۔ <xliff:g id="NON_EMERGENCY_NUMBER">%s</xliff:g> ایک ہنگامی نمبر نہیں ہے!"</string>
-    <string name="dial_emergency_empty_error" msgid="5556166819619323893">"کال نہیں بھیجی گئی۔ ایک ہنگامی نمبر ڈائل کریں!"</string>
+    <!-- no translation found for emergency_enable_radio_dialog_retry (5960061579996526883) -->
+    <skip />
+    <!-- no translation found for dial_emergency_error (1509085166367420355) -->
+    <skip />
+    <!-- no translation found for dial_emergency_empty_error (9130194953830414638) -->
+    <skip />
     <string name="dialerKeyboardHintText" msgid="9192914825413747792">"ڈائل کرنے کیلئے کی بورڈ استعمال کریں"</string>
     <string name="overflowHoldMenuItemText" msgid="7382457697092158039">"کال کو ہولڈ کریں"</string>
     <string name="overflowResumeMenuItemText" msgid="8826360006222366843">"کال کو دوبارہ شروع کریں"</string>
@@ -147,20 +145,6 @@
     <string name="respond_via_sms_custom_message" msgid="6158880869935281078">"اپنا خود کا تحریر کریں…"</string>
     <string name="custom_message_cancel" msgid="7516406059429609296">"منسوخ کریں"</string>
     <string name="custom_message_send" msgid="5795754217085747742">"بھیجیں"</string>
-    <string name="description_image_button_one" msgid="5502718871331943463">"ایک"</string>
-    <string name="description_image_button_two" msgid="4903738528222924522">"دو"</string>
-    <string name="description_image_button_three" msgid="5570985408463782329">"تین"</string>
-    <string name="description_image_button_four" msgid="1697520001239289074">"چار"</string>
-    <string name="description_image_button_five" msgid="3450276493026943454">"پانچ"</string>
-    <string name="description_image_button_six" msgid="2070376172268675300">"چھ"</string>
-    <string name="description_image_button_seven" msgid="1757351311199993371">"سات"</string>
-    <string name="description_image_button_eight" msgid="4734693919020613227">"آٹھ"</string>
-    <string name="description_image_button_nine" msgid="5568534122590597040">"نو"</string>
-    <string name="description_image_button_star" msgid="1976280813017254462">"ستارہ"</string>
-    <string name="description_image_button_zero" msgid="4211255756866893605">"صفر"</string>
-    <string name="description_image_button_pound" msgid="1716041284529917866">"پاؤنڈ"</string>
-    <string name="description_dial_button" msgid="7459705245418435351">"ڈائل کریں"</string>
-    <string name="description_delete_button" msgid="4015842181592283903">"بیک اسپیس"</string>
     <string name="accessibility_speakerphone_selected" msgid="4389354567657833468">"اسپیکر فون منتخب کیا گیا"</string>
     <string name="accessibility_earpiece_selected" msgid="5749525199671068663">"ایئر پیس منتخب کیا گیا"</string>
     <string name="accessibility_wired_headset_selected" msgid="2984920743124263932">"تار والا ہیڈ سیٹ منتخب کیا گیا"</string>
@@ -168,7 +152,8 @@
     <string name="accessibility_call_muted" msgid="2776111226185342220">"کال خاموش کر دی گئی۔"</string>
     <string name="accessibility_call_unmuted" msgid="7496527089753980871">"کال کی آواز چلا دی گئی۔"</string>
     <string name="accessibility_call_put_on_hold" msgid="4226100429657528833">"کال ہولڈ پر ہے۔"</string>
-    <string name="accessibility_call_removed_from_hold" msgid="2269352120695851563">"کال کو ہولڈ سے ہٹا دیا گیا۔"</string>
+    <!-- no translation found for accessibility_call_removed_from_hold (5107480079544990575) -->
+    <skip />
     <string name="description_target_answer" msgid="7205604197797472471">"جواب دیں"</string>
     <string name="description_target_send_sms" msgid="2098326025587950144">"‏SMS بھیجیں"</string>
     <string name="description_target_decline" msgid="4789834364389731957">"مسترد کریں"</string>
@@ -186,9 +171,9 @@
     <string name="default_notification_description" msgid="78174796906240970">"ڈیفالٹ آواز (<xliff:g id="DEFAULT_SOUND_TITLE">%1$s</xliff:g>)"</string>
     <string name="ringtone_title" msgid="6374978286202084684">"فون رنگ ٹون"</string>
     <string name="vibrate_on_ring_title" msgid="9197564612065258960">"بجنے کے وقت مرتعش کریں"</string>
-    <string name="dial_pad_autocomplete" msgid="494525952035761075">"ڈائل پیڈ خود کار تکمیل"</string>
+    <!-- no translation found for dial_pad_autocomplete (7683489952557536398) -->
+    <skip />
     <string name="preference_category_ringtone" msgid="5197960752529332721">"رنگ ٹون اور وائبریٹ"</string>
     <string name="manageConferenceLabel" msgid="4691922394301969053">"کانفرنس کال کا نظم کریں"</string>
     <string name="emergency_call_dialog_number_for_display" msgid="8373041754188879871">"ہنگامی نمبر"</string>
-    <string name="select_account_dialog_title" msgid="5730339500156684204">"اکاؤنٹ منتخب کریں"</string>
 </resources>
